tests/baselines/reference/declarationMerging1(strict=true).errors.txt
file1.ts(2,15): error TS2564: Property '_f' has no initializer and is not definitely assigned in the constructor.
file2.ts(2,5): error TS7010: 'run', which lacks return-type annotation, implicitly has an 'any' return type.


==== file1.ts (1 errors) ====
    class A {
        protected _f: number;
                  ~~
!!! error TS2564: Property '_f' has no initializer and is not definitely assigned in the constructor.
        getF() { return this._f; }
    }
    
==== file2.ts (1 errors) ====
    interface A {
        run();
        ~~~~~~
!!! error TS7010: 'run', which lacks return-type annotation, implicitly has an 'any' return type.
    }